# pong

./: CMakeLists.txt  main.cpp
dependencies/SDL2/cmake/: sdl2-config.cmake
dependencies/SDL2_ttf/cmake/: sdl2_ttf-config-version.cmake  sdl2_ttf-config.cmake
src/AiPaddle/: AiPaddle.cpp  AiPaddle.h
src/Ball/: ball.cpp  ball.h
src/BoundingBox/: boundingBox.cpp  boundingBox.h
src/CenterDivider/: CenterDivider.cpp  CenterDivider.h
src/CourtScene/: CourtScene.cpp  CourtScene.h
src/DiscordInterface/: DiscordInterface.cpp  DiscordInterface.h
src/Draw/: draw.cpp  draw.h
src/EndScreen/: EndScreen.cpp  EndScreen.h
src/Game/: game.cpp  game.h
src/Goal/: Goal.cpp  Goal.h
src/Paddle/: Paddle.cpp  Paddle.h
src/Scene/: Scene.h
src/Score/: Score.cpp  Score.h
src/StartScreen/: StartScreen.cpp  StartScreen.h
